Update package.json with GenTime branding and author Kallesh SK

--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "school-management-api",
+  "name": "gentime-api",
   "version": "2.0.0",
-  "description": "School Management System API - Backend for managing students, teachers, SMS, attendance, fees, and more",
+  "description": "GenTime - School Management System API by Kallesh SK - Backend for managing students, teachers, SMS, attendance, fees, and more",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -9,7 +9,7 @@
     "prod": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "School Management Team",
+  "author": "Kallesh SK",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.12.1",
