--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,48 @@
 # Dependencies
 node_modules/
-api/node_modules/
-frontend/node_modules/
-genapp/node_modules/
+package-lock.json
+yarn.lock
 
-# Environment Variables - IMPORTANT: Keep these secure!
+# Environment variables
 .env
 .env.local
-.env.production.local
 .env.development
-.env.development.local
-api/.env
-api/.env.local
-api/.env.production
-frontend/.env
-frontend/.env.local
-genapp/.env
+.env.production
+.env.test
 
 # Build outputs
-frontend/dist/
-frontend/build/
-api/dist/
-api/build/
-genapp/dist/
-genapp/build/
-
-# Logs
+dist/
+build/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-logs/
-*.log.*
-
-# OS Files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-Desktop.ini
 
 # IDE and Editor files
 .vscode/
 .idea/
 *.swp
 *.swo
-*.swn
 *~
-.project
-.classpath
-.settings/
-*.sublime-project
-*.sublime-workspace
+.DS_Store
 
-# Testing
-coverage/
-.nyc_output/
-*.lcov
+# Uploaded files (if sensitive)
+api/images/uploaded/
 
 # Temporary files
 *.tmp
 *.temp
-tmp/
-temp/
+.cache/
 
-# PM2
-.pm2/
+# Testing
+coverage/
+.nyc_output/
 
-# Database
-*.sqlite
-*.sqlite3
-*.db
+# Production
+*.production
 
-# Misc
-.vercel
-.netlify
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS files
+Thumbs.db
